terraform/security-group.tf
resource "aws_security_group" "sg_gitlab_aws_pipeline" {
  name   = "terraform-sg-gitlab-aws-pipeline"
  vpc_id = aws_vpc.vpc_gitlab_aws_pipeline.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
